[package]
name = "blueshift_escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
bytemuck = "1.24.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
pinocchio = "0.9.2"
pinocchio-associated-token-account = "0.2.0"
pinocchio-system = "0.3.0"
pinocchio-token = "0.4.0"
thiserror = {version = "2.0.17", default-features = false}

